--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
     	"php": ">=5.3.0",
-    	"mouf/database.dbconnection": "~2.0"
+    	"mouf/database.dbconnection": "~2.0",
+    	"mouf/utils.patcher": "~1.0"
     },
     "autoload": {
         "psr-0": {
