--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
         }
     ],
     "require": {
-    	"php": ">=5.3.0",
-    	"mouf/database.doctrine-dbal-wrapper": "~1.0",
-    	"mouf/utils.patcher": "~1.0"
+    	"php": ">=7.1",
+    	"mouf/database.doctrine-dbal-wrapper": "^1.0",
+    	"mouf/utils.patcher": "^2.0"
     },
     "autoload": {
         "psr-0": {
