--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
     "require": {
     	"php": ">=7.1",
     	"mouf/database.doctrine-dbal-wrapper": "^1.0",
-    	"mouf/utils.patcher": "^2.0"
+    	"mouf/utils.patcher": "^2.0",
+        "mouf/classname-mapper": "^1.0",
+        "symfony/filesystem": "^2.0 || ^3.0"
     },
     "autoload": {
         "psr-0": {
