--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     	"mouf/database.doctrine-dbal-wrapper": "^1.0",
     	"mouf/utils.patcher": "^2.0",
         "mouf/classname-mapper": "^1.0",
-        "symfony/filesystem": "^2.0 || ^3.0"
+        "symfony/filesystem": "^2.0 || ^3.0",
+        "thecodingmachine/dbal-fluid-schema-builder": "^1.0"
     },
     "autoload": {
         "psr-0": {
